# quickpay

./: Cargo.toml  LICENSE  README.md
src/: auth_flow.rs  config.rs  inputs.rs  lib.rs  main.rs
