[package]
name = "truelayer-quickpay"
version = "0.1.0"
edition = "2021"
authors = ["Niklas Lindorfer <niklas@lindorfer.com>"]

[[bin]]
name = "pay"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.20"
clap = { version = "4", features = ["derive"] }
config = "0.13"
dialoguer = "0.10"
dirs = "4"
image = "0.24"
indicatif = "0.17"
regex = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
truelayer-rust = { git = "https://www.github.com/TrueLayer/truelayer-rust" }
viuer = "0.6"
